--- a/72.Twelve Days/build.gradle
+++ b/72.Twelve Days/build.gradle
@@ -1,19 +1,24 @@
-plugins {
-    id 'java'
-}
+apply plugin: "java"
+apply plugin: "eclipse"
+apply plugin: "idea"
 
-group 'org.example'
-version '1.0-SNAPSHOT'
+// set default encoding to UTF-8
+compileJava.options.encoding = "UTF-8"
+compileTestJava.options.encoding = "UTF-8"
 
 repositories {
-    mavenCentral()
+  mavenCentral()
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+  testCompile "junit:junit:4.13"
+  testImplementation "org.assertj:assertj-core:3.15.0"
 }
 
 test {
-    useJUnitPlatform()
+  testLogging {
+    exceptionFormat = 'short'
+    showStandardStreams = true
+    events = ["passed", "failed", "skipped"]
+  }
 }
